RESOLVED FIXED48964
Linker error, undefined reference WebCore::setsetCookieStoragePrivateBrowsingEnabled(bool)
https://bugs.webkit.org/show_bug.cgi?id=48964
Summary Linker error, undefined reference WebCore::setsetCookieStoragePrivateBrowsing...
jreck
Reported 2010-11-03 18:20:22 PDT
Linker error building Settings.cpp for Android, undefined reference to WebCore::setCookieStoragePrivateBrowsingEnabled(bool).
Attachments
Patch that moves the setCookieStoragePrivateBrowsingEnabled stub into the WebCore namespace (496 bytes, patch)
2010-11-03 18:21 PDT, jreck
ap: review-
Moved the Android setCookieStoragePrivateBrowsingEnabled(bool) stub to the WebCore namespace (1.22 KB, patch)
2010-11-04 10:11 PDT, jreck
steveblock: review-
Moved the Android setCookieStoragePrivateBrowsingEnabled(bool) stub to the WebCore namespace (1.33 KB, patch)
2010-11-04 10:23 PDT, jreck
no flags
jreck
Comment 1 2010-11-03 18:21:57 PDT
Created attachment 72891 [details] Patch that moves the setCookieStoragePrivateBrowsingEnabled stub into the WebCore namespace
Alexey Proskuryakov
Comment 2 2010-11-03 20:02:26 PDT
Comment on attachment 72891 [details] Patch that moves the setCookieStoragePrivateBrowsingEnabled stub into the WebCore namespace Sorry, r- due to lack of ChangeLog.
Steve Block
Comment 3 2010-11-03 23:56:52 PDT
It would be useful to include in the ChangeLog a link to the change that introduced the problem, and maybe CC the original author to check they're happy with the fix.
Alexey Proskuryakov
Comment 4 2010-11-04 00:04:27 PDT
This is certainly fine as a build fix. I'd welcome input from folks who know how private browsing works on Android and Chromium - perhaps we could refactor setCookieStoragePrivateBrowsingEnabled() in a way that doesn't involve dummy implementations on platforms that do this differently now.
jreck
Comment 5 2010-11-04 10:11:39 PDT
Created attachment 72957 [details] Moved the Android setCookieStoragePrivateBrowsingEnabled(bool) stub to the WebCore namespace
Steve Block
Comment 6 2010-11-04 10:19:18 PDT
Comment on attachment 72957 [details] Moved the Android setCookieStoragePrivateBrowsingEnabled(bool) stub to the WebCore namespace View in context: https://bugs.webkit.org/attachment.cgi?id=72957&action=review Did you track down the original offending change? Would be good to link to it > WebCore/ChangeLog:9 > + a linker failure when building for Android. Moved the stub to the WebCore namespace. All WebCore changes need to mention how they're tested. In this case, 'No new tests, build fix only' is sufficient
jreck
Comment 7 2010-11-04 10:23:04 PDT
Created attachment 72958 [details] Moved the Android setCookieStoragePrivateBrowsingEnabled(bool) stub to the WebCore namespace 3rd times a charm? *crosses fingers* heh
Steve Block
Comment 8 2010-11-04 10:32:49 PDT
Comment on attachment 72958 [details] Moved the Android setCookieStoragePrivateBrowsingEnabled(bool) stub to the WebCore namespace r=me
WebKit Commit Bot
Comment 9 2010-11-04 11:00:56 PDT
The commit-queue encountered the following flaky tests while processing attachment 72958 [details]: http/tests/xmlhttprequest/cross-origin-no-credential-prompt.html Please file bugs against the tests. These tests were authored by ap@webkit.org. The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 10 2010-11-04 11:03:03 PDT
Comment on attachment 72958 [details] Moved the Android setCookieStoragePrivateBrowsingEnabled(bool) stub to the WebCore namespace Clearing flags on attachment: 72958 Committed r71346: <http://trac.webkit.org/changeset/71346>
WebKit Commit Bot
Comment 11 2010-11-04 11:03:08 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.