2010-11-04  John Reck  <jreck@google.com>

Reviewed by Steve Block.

        Fix a linker failure when building for Android
        https://bugs.webkit.org/show_bug.cgi?id=48964

        The Android stub for setCookieStoragePrivateBrowsingEnabled(bool) wasn't in the WebCore namespace, which caused
        a linker failure when building for Android. Moved the stub to the WebCore namespace. This was caused by
        http://trac.webkit.org/changeset/70400

        No new tests, build fix only

        * platform/android/TemporaryLinkStubs.cpp:

git-svn-id: svn://svn.chromium.org/blink/trunk@71346 bbb929c8-8fbe-4397-9dbb-9b2b20218538