third_party/WebKit/WebCore/platform/android/TemporaryLinkStubs.cpp
@@ -502,9 +502,13 @@ OpaqueJSClassContextData::~OpaqueJSClassContextData()
     notImplemented();
 }
 
+#endif
+
+namespace WebCore {
+
 void setCookieStoragePrivateBrowsingEnabled(bool)
 {
     notImplemented();
 }
 
-#endif
+} // namespace WebCore
